# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
page_analyzer/: app.py  db.py  logger.py  main.py  models.py  routes.py
page_analyzer/templates/: index.html  url_detail.html  urls.html
